--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "MemoryGame",
+  "name": "fifteen-puzzle",
   "version": "1.0.0",
-  "description": "Simple Fable App",
+  "description": "15-Puzzle implemented with Fable Elmish",
   "scripts": {
     "build": "webpack -p",
     "start": "webpack-dev-server"
@@ -10,23 +10,20 @@
   "author": "Zaid Ajaj",
   "license": "MIT",
   "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "fable-core": "1.0.0-narumi-909",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "6.26.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "fable-elmish": "^0.9.0-beta-6",
-    "fable-elmish-browser": "0.9.0-beta-5",
-    "fable-elmish-react": "^0.9.0-beta-4",
-    "fable-loader": "^1.0.0-narumi-908",
-    "fable-powerpack": "^1.0.0-narumi-3",
-    "fable-react": "^1.0.0-narumi-4",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "concurrently": "3.5.0",
+    "fable-loader": "1.1.3",
+    "fable-utils": "1.0.6",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.9.1"
   }
 }
